# back-to-the-future

./: .bazelrc  .clang-tidy  .dap.el  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  WORKSPACE  build.sh  build_config.h.in  cmake_install.cmake  install.sh  launch.json  main.cpp  test_build.sh
bazel/: BUILD  api_repositories.bzl  build_system.bzl  cc.bzl  dependency_imports.bzl  repositories.bzl  repository_locations.bzl
bazel/ext/: BUILD
bazel/foreign_cc/: BUILD
bazel/toolchain/: BUILD  cc.bzl
src/advertisement/: BUILD  advertisement.cc  advertisement.h
src/domain/: BUILD  ad.cc  ad.h
src/exe/: BUILD  main.cc
src/http/: BUILD  server.h
src/logger/: BUILD  logger.cc  logger.h
src/main/: BUILD  main.cc
test/domain/: BUILD  ad_test.cc
